--- a/HttpTwo.HPack/HttpTwo.HPack.csproj
+++ b/HttpTwo.HPack/HttpTwo.HPack.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;netstandard2.0;net46</TargetFrameworks>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <TargetFrameworks>netcoreapp2.1</TargetFrameworks>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <AssemblyName>HttpTwo.HPack</AssemblyName>
   </PropertyGroup>
 
